Replace resources api to return the max allocatable memory (#264)
