# swagger.yml
@@ -1227,15 +1227,22 @@ paths:
       tags:
         - AdminAPI
   
-  /cluster/resources:
+  /cluster/max-allocatable-memory:
     get:
-      summary: Get Cluster Resources
-      operationId: GetClusterResources
+      summary: Get maximum allocatable memory for given number of nodes
+      operationId: GetMaxAllocatableMem
+      parameters:
+        - name: num_nodes
+          in: query
+          required: true
+          type: integer
+          format: int32
+          minimum: 1
       responses:
         200:
           description: A successful response.
           schema:
-            $ref: "#/definitions/clusterResources"
+            $ref: "#/definitions/maxAllocatableMemResponse"
         default:
           description: Generic error response.
           schema:
@@ -2589,50 +2596,10 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/zone"
-
-  clusterResources:
-    type: object
-    properties:
-      nodes:
-        type: array
-        items:
-          $ref: "#/definitions/nodeInfo"
   
-  nodeInfo:
+  maxAllocatableMemResponse:
     type: object
     properties:
-      name:
-        type: string
-      taints:
-        $ref: "#/definitions/nodeTaints"
-      allocatable_resources:
-        type: object
-        additionalProperties:
-            type: integer
-            format: int64
-        description: Represents the resources of a node that are available for scheduling.
-      total_resources:
-        type: object
-        additionalProperties:
-            type: integer
-            format: int64
-        description: Represents the total resources of a node.
-          
-  nodeTaints:
-    type: object 
-    properties:
-      no_schedule:
-        type: array
-        items:
-          type: string
-      no_execute:
-        type: array
-        items:
-          type: string
-      prefer_no_schedule:
-        type: array
-        items:
-          type: string
-
-
-      
+      max_memory:
+        type: integer
+        format: int64
